src/scss/styles.scss
// Custom.scss
// Option B: Include parts of Bootstrap

@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
@import "bootstrap/scss/functions";

// 2. Include any default variable overrides here

$body-bg: #f2f2f2;
$input-btn-padding-y: .5rem;
$input-btn-padding-x: 1.5rem;
$font-family-sans-serif: 'Roboto', sans-serif !default;
$headings-font-family: 'Titillium Web', sans-serif !default;

// 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
@import "bootstrap/scss/variables";
@import "bootstrap/scss/variables-dark";

// 4. Include any default map overrides here

// 5. Include remainder of required parts
@import "bootstrap/scss/maps";
@import "bootstrap/scss/mixins";
@import "bootstrap/scss/root";

// 6. Optionally include any other parts as needed
@import "bootstrap/scss/utilities";
@import "bootstrap/scss/buttons";
@import "bootstrap/scss/card";
@import "bootstrap/scss/reboot";
@import "bootstrap/scss/type";
@import "bootstrap/scss/images";
@import "bootstrap/scss/containers";
@import "bootstrap/scss/grid";
@import "bootstrap/scss/helpers";

$utilities: map-merge($utilities,
    (
      "width": map-merge(map-get($utilities, "width"),
        (responsive: true)),
      "font-size": map-merge(map-get($utilities, "font-size"),
        (responsive: true),
      ),
      "font-weight": map-merge(map-get($utilities, "font-weight"),
        (responsive: true),
      )));

// 7. Optionally include utilities API last to generate classes based on the Sass map in `_utilities.scss`
@import "bootstrap/scss/utilities/api";

// 8. Add additional custom code here

//! RESET STYLES

h1 {
  font-family: 'Roboto', sans-serif;
  // font-size: 2.5rem;
  font-weight: 700;
}

img {
  display: block;
  max-width: 100%;
  height: auto;
}

//! CUSTOM ID STYLES

#hero-bg {
  object-fit: cover;
  object-position: bottom center;
  width: 100%;
  height: 32rem;
}

#hero-img-container {
  box-sizing: content-box;
  width: 16rem;
  height: 16rem;

  @media screen and (min-width: 992px) {
    width: 18rem;
    height: 18rem;
  }
  @media screen and (min-width: 1200px) {
    width: 22rem;
    height: 22rem;
  }
}

#hero-img {
  object-fit: cover;
  object-position: top center;
}

#hero-cta {
  width: 16rem;
  height: 16rem;

  @media screen and (min-width: 992px) {
    width: 18rem;
    height: 18rem;
  }

  @media screen and (min-width: 1200px) {
    width: 22rem;
    height: 22rem;
  }
}

//! UTILITY CLASSES

// Class for word wrapping behavior
.no-wrap {
  word-break: keep-all;
  white-space: nowrap;
}

// Class for letter spacing (tracking)
.tracking-wide {
  letter-spacing: 0.1em;
}

